# chat-backend

./: .gitignore  README.md  alembic.ini  coding_agent_instructions.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_create_chat_tables.py
app/llm/: base.py  embeddings.py  mock_provider.py  openai_provider.py
app/schemas/: chat.py
app/services/: entity_resolver.py  orchestrator.py  query_classifier.py  retrieval.py  title_selector.py
app/utils/: citations.py  fuzzy.py
postman/: ChatBackend.postman_collection.json
tests/: conftest.py  test_chat_integration.py  test_entity_resolver.py  test_llm_provider.py  test_retrieval.py
